--- a/maven-samples/single-module/pom.xml
+++ b/maven-samples/single-module/pom.xml
@@ -158,7 +158,7 @@
       <scope>test</scope>
     </dependency>
 
-   # <dependency>
+    <dependency>
       <groupId>org.hamcrest</groupId>
       <artifactId>hamcrest-library</artifactId>
       <version>1.2.1</version>
